Fix carousel alignment: dynamically calculate header height for all screen sizes

--- a/app/components/home.module.scss
+++ b/app/components/home.module.scss
@@ -3,7 +3,6 @@
 
 .home {
   padding: 0;
-  padding-top: var(--header-height,140px);
   min-height: calc(100vh - 300px);
 }
 
